<resources>
    <string name="app_name">SerbaGuna</string>
    <string name="_62">+62</string>
    <string name="https_apapedulimu_click">https://apapedulimu.click</string>
    <string name="personalwebsite">personalwebsite</string>
    <string name="todo">TODO</string>
    <string name="stmik_yadika_bangil">STMIK Yadika Bangil</string>
    <string name="tempatmu">tempatMu</string>
    <string name="maps">Maps</string>
    <string name="calender">Calender</string>
    <string name="nosa_shandy">Nosa Shandy</string>
    <string name="_117227023">117227023</string>
    <string name="pic" />
    <string name="hello_world" />
</resources>
